--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "babel-preset-flow": "^6.23.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-es2015": "^7.0.0-beta.53",
+    "@babel/preset-stage-0": "^7.0.0",
+    "babel-preset-stage-0": "^6.24.1",
     "jest": "^23.5.0"
   }
 }
