--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-stage-0": "^7.0.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-stage-0": "^6.24.1",
     "jest": "^23.5.0"
   }
