--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "babel-preset-flow": "^6.23.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-redux": "^5.0.7"
+    "react-redux": "^5.0.7",
+    "rxjs": "^6.3.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-stage-0": "^7.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-stage-0": "^6.24.1",
     "jest": "^23.5.0"
