--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "scripts": {
+    "start": "parcel example/index.html",
     "test-w": "jest --watch",
     "test": "jest"
   },
@@ -17,6 +18,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-stage-0": "^6.24.1",
-    "jest": "^23.5.0"
+    "jest": "^23.5.0",
+    "parcel": "^1.9.7"
   }
 }
