--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,8 @@
 {
     "presets": [
-        "es2015", "stage-0"
+        "es2015",
+        "stage-0",
+        "react"
     ],
     "plugins": ["transform-flow-strip-types", "transform-decorators-legacy", "transform-class-properties"]
 }
