--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "main": "src/index.js",
   "scripts": {
-    "start": "parcel example/index.html",
+    "start": "parcel example/index.html --no-cache",
     "test-w": "jest --watch",
     "test": "jest"
   },
